--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^3.1.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
